2014-06-21  Eli Zaretskii  <eliz@gnu.org>

	* autotype.texi (Skeleton Language): Document the feature of \n
	when at eol.

2014-06-15  Michael Albinus  <michael.albinus@gmx.de>

	* dbus.texi (Type Conversion): Formatting edits in example.

2014-06-10  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (INFO_INSTALL): Update for 2013-08-28 DOCMISC_W32 change.

2014-06-08  Karl Berry  <karl@gnu.org>

	* doc/info.texi (Help-^L): "mode line", "screenful",
	stand-alone and Emacs Info both use the mode line.
	Use x instead of weird C-x 0 to get rid of help msg
	in standalone Info.

2014-06-08  Glenn Morris  <rgm@gnu.org>

	* vip.texi (Files): Defer to Emacs manual for uniquify details.

	* info.texi (Help-Small-Screen): Clarify details of S-SPC.
	(Help-Small-Screen, Help-]): Do not mention S-SPC.
	(Emacs Info Variables): Markup fix.

	* ebrowse.texi (Source Display, Finding/Viewing):
	* erc.texi (Sample Session):
	* ses.texi (The Basics):
	* todo-mode.texi (Moving and Deleting Items):
	* woman.texi (Navigation): Markup fixes re SPC, RET.

2014-05-24  Paul Eggert  <eggert@cs.ucla.edu>

	Specify coding if Latin-1 Emacs would misinterpret (Bug#17575).
	* htmlfontify.texi, org.texi: Add "coding: utf-8".

2014-05-23  Stephen Berman  <stephen.berman@gmx.net>

	* todo-mode.texi: Update in light of changes due to bug#17482.
	Replace numerous mistaken uses of literal quotes with proper
	Texinfo markup.
	(Todo Mode Entry Points): Comment out reference to using find-file
	or Dired to visit Todo files, since this has been disabled (bug#17482).

2014-05-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.texi (Frequently Asked Questions): Mention HISTFILE
	setting in ~/.ssh/environment.

2014-05-02  Stephen Berman  <stephen.berman@gmx.net>

	* todo-mode.texi: Update, improve exposition, add cross
	references, fix typos.
	(Inserting New Items, Editing Item Headers and Text): Rewrite to
	document new user interface.

2014-05-01  Glenn Morris  <rgm@gnu.org>
